data/derived/comb/progs/unify/prog4215.ml.out
Characters 39-76:
  app (digitsOfInt (n/10) @ [n mod 10])
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int list
